Bug 1850213 - Initialize mInHTMLEditorEventListener. r=masayuki

`mInHTMLEditorEventListener` isn't initialized during IPC, so this variable is
randomly between multi-process.

Also, I try to write a test for it, but drag and drop tests don't seem to
support multi-process.

Differential Revision: https://phabricator.services.mozilla.com/D196694